--- a/MasterThesis/Smart_Contract.tex
+++ b/MasterThesis/Smart_Contract.tex
@@ -26,13 +26,13 @@
 %\include{mymacros}
 
 \title{Semantic Smart Contracts   %your thesis title,
-      And Their Integration With Semantic Data Licesing} 
+      And Their Integration With Semantic Data Licensing} 
           %note \\[1ex] is a line break in the title
 
 \author{Zahra Jafari}             
 \college{University of Innsbruck}  
 \degree{Master of Informatic}     %the degree
-\degreedate{2019}         %the degree date
+\degreedate{2023}         %the degree date
 
 %end the preamble and start the document
 \begin{document}
