--- a/MasterThesis/appendix1.tex
+++ b/MasterThesis/appendix1.tex
@@ -1,15 +1,8 @@
 \chapter{Semantic mapping column in web3}
 The appendix comprises semantic mapping elements described and the source code for the smart contracts described in forth  chapter.
 \small
-
-\begin{center}
-	\begin{figure}[htb!]
-		
-		\begin{minipage}{0.15\textwidth}
-           \centering
-			\includegraphics[width=1.95\textwidth]{images/chap03_web3_schema.png}
-		\end{minipage}
-	
-	\end{figure}
-	
-\end{center}
+ \begin{figure}
+    \centering
+       \includegraphics[width=0.9\textwidth]{images/chap03_web3_schema.png}
+    
+  \end{figure}
