--- a/MasterThesis/biblio.bib
+++ b/MasterThesis/biblio.bib
@@ -1,20 +1,20 @@
 
 @Article{Pablo,
-	title =        "{Scripting smart contracts
-	for distributed ledger technology}",  
-	author =      "Pablo Lamela Seijas, Simon Thompson, Darryl McAdams",
-	volume =        "30",
-	year =         "2016",
-	month =        "12"
-	
+  title =        "{Scripting smart contracts
+                  for distributed ledger technology}",  
+  author =      "Pablo Lamela Seijas, Simon Thompson, Darryl McAdams",
+  volume =        "30",
+  year =         "2016",
+   month =        "12"
+  
 } 
 @Article{Matthew,
-	title =        "{Block Chain Technologies and The Semantic Web:
+	title =        "{Block Chain Technologies & The Semantic Web:
 	A Framework for Symbiotic Development}",  
 	author =      "Matthew English, Soeren Auer, and John Domingue",
 	volume =        "15",
 	year =         "2016"
-	
+
 }, 
 
 @review{Christidis,
@@ -24,7 +24,7 @@
 	journal = {SPECIAL SECTION ON THE PLETHORA OF RESEARCH IN INTERNET OF THINGS (IoT)},
 	volume = {12},
 	year = {2016},
-	month = {3} 
+    month = {3} 
 },
 
 @article{Valentina,
@@ -51,7 +51,7 @@
 @article{Hex,
 	author  = {Lin William Congy, Zhiguo Hex}, 
 	title   = {Blockchain Disruption and Smart Contracts},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
+	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"}, 
 	volume  = 12,
 	month = 2,
 	year = 2018
@@ -60,7 +60,7 @@
 @article{Vitalik,
 	author  = {Vitalik Buterin}, 
 	title   = {A Next generation smart contract & decentrlized application platform},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
+	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"}, 
 	volume  = 36,
 	url =  {"http://blockchainlab.com/pdf/Ethereum_white_paper-a_next_generation_smart_contract_and_decentralized_application_platform-vitalik-buterin.pdf"}, 
 	month = 2,
@@ -81,7 +81,7 @@
 	author  = {Hector Ugarte }, 
 	title   = {A more pragmatic Web 3.0: Linked Blockchain Data},
 	url = {"https://semanticblocks.files.wordpress.com/2017/03/linked_blockchain_paper_final.pdf"}, 
-	DOI= {10.13140/RG.2.2.10304.12807/1}
+	DOI= {10.13140/RG.2.2.10304.12807/1},
 	volume = 15, 
 	month = 1,
 	year = 2017
@@ -118,7 +118,7 @@
 	Blockchain-backed Trustworthy Linked Data},
 	url = {https://pdfs.semanticscholar.org/ffae/f7f3604fb4e97a39b9032928b47fa422099c.pdf}, 
 	volume = 12 
-	
+
 },
 @article{Grishchenko,
 	author  = {Ilya Grishchenko, Matteo Maffei, and Clara Schneidewind},  
@@ -129,13 +129,13 @@
 	year   = 2018 	
 },
 @article{Rashid,
-	author  = {Umar Rashid, Allan Third, John Domingue},  
-	title   = {Web Service for Semantic Negotiation of Smart Contracts},
-	url = {  https://openreview.net/forum?id=BJg2gCu1e7}, 
-	volume = 6,
-	year   = 2018,
-	month = 1 	
-},
+ 	author  = {Umar Rashid, Allan Third, John Domingue},  
+ 	title   = {Web Service for Semantic Negotiation of Smart Contracts},
+ 	url = {  https://openreview.net/forum?id=BJg2gCu1e7}, 
+ 	volume = 6,
+ 	year   = 2018,
+ 	month = 1 	
+ },
 
 @conference{Sopek,
 	author       = {Mirek Sopek, Przemysław Grądzki, Witold Kosowski , Dominik Kozuski, Rafa Troczak, Robert Trypuz}, 
@@ -170,7 +170,7 @@
 	url = {  https://eprints.cs.univie.ac.at/5433/7/sanerws18iwbosemain-id1-p-380f58e-35576-preprint.pdf.}, 
 	volume = 7,
 	year   = 2018,
-	
+ 	
 },
 
 @article{John,
@@ -180,7 +180,7 @@
 	url = {http://dx.doi.org/doi:10.1007/978-3-319-70407-441}, 
 	volume = 7,
 	year   = 2017,
-	pages = 327–332
+	pages = 332
 	
 },
 @article{Florian,
@@ -191,17 +191,17 @@
 	volume = 15,
 	year   = 2016,
 	month  = 8 
-	
+
 },
 @article{Baqa, 
-	
-	author  = {Hamza Baqa, Nguyen B. Truongy, Noel Crespi, Gyu Myoung Leex, Franck Le Gall},  
-	title   = {Semantic Smart Contracts for Blockchain-based
-	Services in the Internet of Things},
-	url = {http://researchonline.ljmu.ac.uk/id/eprint/11315/}, 
-	volume = 5,
-	year   = 2019,
-	
+
+author  = {Hamza Baqa, Nguyen B. Truongy, Noel Crespi, Gyu Myoung Leex, Franck Le Gall},  
+title   = {Semantic Smart Contracts for Blockchain-based
+Services in the Internet of Things},
+url = {http://researchonline.ljmu.ac.uk/id/eprint/11315/}, 
+volume = 5,
+year   = 2019,
+
 },
 
 @Masterthesis{Markos, 	
@@ -213,107 +213,99 @@
 	
 },
 @BOOK{DLT,
-	TITLE = {Distributed Ledger Technology(DLT) and Blockchain},
-	AUTHOR = {World Bank Group},
-	YEAR = {2017},
-	PUBLISHER = {World Bank Group},
+  TITLE = {Distributed Ledger Technology(DLT) and Blockchain},
+  AUTHOR = {World Bank Group},
+  YEAR = {2017},
+  PUBLISHER = {World Bank Group},
 },
 
 @BOOK{Gupta,
-	TITLE = {Blockchain for dummies},
-	AUTHOR = {Manav Gupta},
-	YEAR = {2018},
-	PUBLISHER = {John Wiley},
+  TITLE = {Blockchain for dummies},
+  AUTHOR = {Manav Gupta},
+  YEAR = {2018},
+  PUBLISHER = {John Wiley},
 },
 @article{Coyla, 
-	author  = {Karen Coyle},  
-	title   = {Semantic Web and Linked Data},
-	url = {https://journals.ala.org/ltr/article/view/4669/5539}, 
-	volume = 5,
-	year   = 2012,
-	
+author  = {Karen Coyle},  
+title   = {Semantic Web and Linked Data},
+url = {https://journals.ala.org/ltr/article/view/4669/5539}, 
+volume = 5,
+year   = 2012,
+
 },
 
 @article{Luke, 
-	author  = {Max Luke, Anna Dimitrova, Stephen James Lee, Zdenek Pekarek},  
-	title   = {Blockchain in Electricity: a Critical Review of Progress to Date},
-	url = {https://www.researchgate.net/publication/332138382}, 
-	volume = 38,
-	year   = 2018,
-	
-},
+author  = {Max Luke, Anna Dimitrova, Stephen James Lee, Zdenek Pekarek},  
+title   = {Blockchain in Electricity: a Critical Review of Progress to Date},
+url = {https://www.researchgate.net/publication/332138382}, 
+volume = 38,
+year   = 2018,
 
+},
 @article{Aithal, 
-	author  = {P.K. Paul1, P.S. Aithal, Ricardo Saavedra and Surajit Ghosh},  
-	title   = {Blockchain in Electricity: a Critical Review of Progress to Date},
-	url = {https://www.researchgate.net/publication/359051731}, 
-	volume = 13,
-	year   = 2021,
-	
-},
+author  = {P.K. Paul1, P.S. Aithal, Ricardo Saavedra and Surajit Ghosh},  
+title   = {Blockchain in Electricity: a Critical Review of Progress to Date},
+url = {https://www.researchgate.net/publication/359051731}, 
+volume = 13,
+year   = 2021,
 
+},
 @article{Dilhara, 
-	author  = {Shashie Dilhara},  
-	title   = {A Review on Application of Hash Functions and Digital signatures in the
-	Blockchain Industry},
-	url = {https://www.researchgate.net/publication/354700341}, 
-	volume = ,
-	year   = 2021,
-	
-},
+author  = {Shashie Dilhara},  
+title   = {A Review on Application of Hash Functions and Digital signatures in the
+Blockchain Industry},
+url = {https://www.researchgate.net/publication/354700341}, 
+volume = ,
+year   = 2021,
 
+},
 @article{William, 
-	author  = {William Metcalfe},  
-	title   = {Ethereum, Smart Contracts, DApps},
-	url = {https://doi.org/10.1007/978-981-15-3376-1_5}, 
-	volume = 17,
-	year   = 2020,
-	
-},
+author  = {William Metcalfe},  
+title   = {Ethereum, Smart Contracts, DApps},
+url = {https://doi.org/10.1007/978-981-15-3376-1_5}, 
+volume = 17,
+year   = 2020,
 
+},
 @article{Payrott, 
-	author  = {Sebastian Payrott},  
-	title   = {introduction to Ethereum and Smart Contracts},
-	url = {https://ethereum.org/669c9e2e2027310b6b3cdce6e1c52962/Ethereum_Whitepaper_-_Buterin_2014.pdf}, 
-	volume = 68,
-	year   = 2017,
-	
-},
+author  = {Sebastian Payrott},  
+title   = {introduction to Ethereum and Smart Contracts},
+url = {https://ethereum.org/669c9e2e2027310b6b3cdce6e1c52962/Ethereum_Whitepaper_-_Buterin_2014.pdf}, 
+volume = 68,
+year   = 2017,
 
+},
 @article{Wood, 
-	author  = {Sebastian Payrott},  
-	title   = {introduction to Ethereum and Smart Contracts},
-	url = {https://ethereum.org/669c9e2e2027310b6b3cdce6e1c52962/Ethereum_Whitepaper_-_Buterin_2014.pdf}, 
-	volume = 68,
-	year   = 2017,
-	
-},
+author  = {Sebastian Payrott},  
+title   = {introduction to Ethereum and Smart Contracts},
+url = {https://ethereum.org/669c9e2e2027310b6b3cdce6e1c52962/Ethereum_Whitepaper_-_Buterin_2014.pdf}, 
+volume = 68,
+year   = 2017,
 
+},
 @article{Tassilo, 
-	author  = {Tassilo Pellegrini},  
-	title   = {Detecting Licensing Conflicts with DALICC},
-	url = {http://ffhoarep.fh-ooe.at/bitstream/123456789/1025/1/Panel_120_ID_193.pdf}, 
-	volume = 5,
-	year   = 2017,
-	
-},
+author  = {Tassilo Pellegrini},  
+title   = {Detecting Licensing Conflicts with DALICC},
+url = {http://ffhoarep.fh-ooe.at/bitstream/123456789/1025/1/Panel_120_ID_193.pdf}, 
+volume = 5,
+year   = 2017,
 
+},
 @article{Anna, 
-	author  = {Tassilo Pellegrini, Simon Steyskal, Oleksandra Panasiuk, Anna Fensel},  
-	title   = {Automated Rights Clearance Using Semantic Web Technologies},
-	DOI = {DOI: 10.1007/978-3-662-55433-3_14}, 
-	volume = 16,
-	year   = 2018,
-	
-},
+author  = {Tassilo Pellegrini, Simon Steyskal, Oleksandra Panasiuk, Anna Fensel},  
+title   = {Automated Rights Clearance Using Semantic Web Technologies},
+DOI = {DOI: 10.1007/978-3-662-55433-3_14}, 
+volume = 16,
+year   = 2018,
 
+},
 @article{Fips, 
-	author  = {Fips},  
-	title   = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
-	DOI = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
-	volume = 37,
-	year   = 2015,
-	
+Author  = {FIPS 202 },  
+title   = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
+DOI = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
+volume = 37,
+year   = 2015,
+
 },
 @article{Ozsu, 
 	author  = {Tamer Özsu},  
@@ -323,4 +315,38 @@
 	year   = 2002,
 	
 },
+@article{Ilya, 
+	author  = {Ilya Grishchenko, Matteo Maffei, and Clara Schneidewind},  
+	title   = {A Semantic Framework for the Security Analysis of Ethereum Smart Contracts},
+	DOI = {https://doi.org/10.1007/978-3-319-89722-6_10}, 
+	volume = 27,
+	year   = 2018,
+	
+},
+@article{Egbertsen, 
+	author  = {Wesley Egbertsen, Gerdinand Hardeman, Maarten van den Hoven, Gert van der Kolk and Arthur van ijsewijk},  
+	title   = {Replacing Paper Contracts With Ethereum Smart Contracts Contract Innovation with Ethereum},
+	Url = {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf}, 
+	volume = 35,
+	year   = 2016,
+	
+},
+@article{Gavin, 
+	author  = {DR.GAVIN WOOD},  
+	title   = {ETHEREUM: A SECURE DECENTRALISED GENERALISED TRANSACTION LEDGER},
+	Url = {https://gavwood.com/paper.pdf}, 
+	volume = 34,
+	year   = 2017,
+	
+},
+@article{Kim, 
+	author  = {Henry M. Kim | Marek Laskowski},  
+	title   = {Toward an ontology‐driven blockchain design for supply‐chain provenance},
+	DOI = {DOI: 10.1002/isaf.1424}, 
+	volume = 18,
+	year   = 2018,
+	
+},
+
+
 
