--- a/MasterThesis/chapter1.tex
+++ b/MasterThesis/chapter1.tex
@@ -45,7 +45,7 @@ Blockchain is associated with cryptocurrencies like Ethereum, bitcoin, lite coin
 \end{itemize}
 
 \subsection{Type of Blockchian}
-According to Athital\cite{Athital} blockchain is used to transfer and exchange information through the secure network. Primarily, there were two types of blockchain technology public and private networks. Some analyses on blockchain technology can also be called blockchain as consortium blockchain technology and hybrid blockchain technology. \\
+According to Aithal\cite{Aithal} blockchain is used to transfer and exchange information through the secure network. Primarily, there were two types of blockchain technology public and private networks. Some analyses on blockchain technology can also be called blockchain as consortium blockchain technology and hybrid blockchain technology. \\
 That should be noted that all kinds of blockchains consist of nodes and works on \textit{P2P} network. Aithal \cite{Aithal} classified blockchain into three types as bellow: public blockchain, private blockchain, and consortium blockchain. Besides this, there is another type of blockchain, known as the hybrid blockchain.
 \begin{itemize}
     \item \textbf{Public Blockchain}
@@ -114,13 +114,14 @@ There are two types of accounts in Ethereum:\\
 \textbf{Hash function}
 The process of SHA-3 standardization by NIST was completed in Auguts 2015.
 This standard specify SHA3 Secure hash algorithm-3 family of function on binary data. Each hash function is based on \textit{Kacak} algorithm that is known as NIST as winner of SHA-3 cryptographic hash algorithm competition. The SHA3 family includes four functions with different lengths of 224, 256, 384, and 512 bits. 
-In hash function, input called as \textit{message} and output called as  \textit{has value} which the length of message can vary but, the length of hash value is always fixed \cite{fips}.\\
+In hash function, input called as \textit{message} and output called as  \textit{has value} which the length of message can vary but, the length of hash value is always fixed \cite{Fips}.\\
+
 \begin{center}
 	\begin{figure}[htb!]
 		
-		\begin{minipage}{0.5\linewidth}
+		\begin{minipage}{0.2\linewidth}
 			\centering
-			\includegraphics[width=1.95\textwidth]{images/chap01_hash_function.png}
+			\includegraphics[width=4.5\textwidth]{images/chap01_hash_function.png}
 		\end{minipage}
 		\caption[Image of hash function]{Image of hash function}
 		
