--- a/MasterThesis/chapter3.tex
+++ b/MasterThesis/chapter3.tex
@@ -7,7 +7,7 @@ The following requirements would be addressed by the DALICC framework:\\
 	\item \textit{Tackling license heterogeneity:} \\
 	It is possible to combine the various contents which have the same license with different names. But that would be much more difficult to license the resultant of the combined contents. To solve this issue, DALICC provides a set of machine-readable representations of licenses that allow us to compare licenses to each other to identify the equivalent licenses. It guides the user to possible conflicts of various combined licenses.
 	\item \textit{Tackling REL heterogeneity:} \\
-	Combing licenses are simple if they are expressed through the same RED. But, it is difficult to compare licenses that have been represented by different RELs.\\
+	Combing licenses are simple if they are expressed through the same RELs. But, it is difficult to compare licenses that have been represented by different RELs.\\
 	DALICC resolves this problem, by representing RELs based on the semantic web and mapping the terms to each other. It will represent exiting RELs based on  W3C-approved standards, thus allowing mapping between various RELs to be created.
 	\item \textit{Compatibility check, conflict detection and neutrality of the rules:} \\
 	It is difficult to be sure if the meaning of the different terms in semantics is aligned. These problems result from indicating the classes, instances, and properties which can not be handled just by mapping.\\
